--- a/scoring-mp/src/main/resources/META-INF/microprofile-config.properties
+++ b/scoring-mp/src/main/resources/META-INF/microprofile-config.properties
@@ -23,7 +23,7 @@ mp.messaging.outgoing.containers.value.serializer=org.apache.kafka.common.serial
 
 #### Config shared between all kafka connections
 
-# bootstrap server is the only config needed for plain unsercure local kafka instance
+# bootstrap server is the only config needed for plain insercure local kafka instance
 mp.messaging.connector.liberty-kafka.bootstrap.servers=
 
 # If connecting to Event Streams on IBM Cloud or to any Kafka deployment with SSL security
