Corrected reeferTelemetry topic name
Signed-off-by: Rick Osowski <rosowski@gmail.com>

--- a/simulator/app-deploy.yaml
+++ b/simulator/app-deploy.yaml
@@ -28,7 +28,7 @@ spec:
         key: brokers
         name: kafka-brokers
   - name: TELEMETRY_TOPIC
-    value: reeferTelemetries
+    value: reeferTelemetry
   - name: CONTAINER_TOPIC
     value: containers
   - name: KAFKA_APIKEY
