Scoring mp First pass (#39)
* removing configuration from git tracking

* removing mp properties

* first pass

* second drop

* third drop

* fourth drop

* fourth drop gitignore workaround

* fifth drop

* gitignore

* charts

* adding quick testing

* documentation

Co-authored-by: Jesus Almaraz <almarazj@ie.ibm.com>

--- a/scoring-mp/.gitignore
+++ b/scoring-mp/.gitignore
@@ -1,6 +1,9 @@
 /target/*
 !.keep
 
+### MP Config
+**/microprofile-config.properties
+**/*.jks
 
 ### STS ###
 .apt_generated
@@ -27,3 +30,5 @@
 
 ### VS Code ###
 .vscode/
+
+.DS_Store
