--- a/scoring-mp/src/main/resources/META-INF/microprofile-config.properties
+++ b/scoring-mp/src/main/resources/META-INF/microprofile-config.properties
@@ -22,9 +22,12 @@ mp.messaging.outgoing.containers.key.serializer=org.apache.kafka.common.serializ
 mp.messaging.outgoing.containers.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 
 #### Config shared between all kafka connections
-
+#
+# This is currently added in bootstrap.properties due to https://github.com/OpenLiberty/open-liberty/issues/10575
+#
 # bootstrap server is the only config needed for plain insercure local kafka instance
-mp.messaging.connector.liberty-kafka.bootstrap.servers=
+#mp.messaging.connector.liberty-kafka.bootstrap.servers=eventstream140-ibm-es-proxy-route-bootstrap-eventstreams.apps.green.ocp.csplab.local:443
+#mp.messaging.connector.liberty-kafka.bootstrap.servers=
 
 # If connecting to Event Streams on IBM Cloud or to any Kafka deployment with SSL security
 # mp.messaging.connector.liberty-kafka.security.protocol=SASL_SSL
