Updated default for scoringmp truststore enabled
Signed-off-by: Rick Osowski <rosowski@gmail.com>

--- a/scoring-mp/chart/scoringmp/values.yaml
+++ b/scoring-mp/chart/scoringmp/values.yaml
@@ -42,7 +42,7 @@ kafka:
     enabled: true
     bootstrapSecret: openliberty-bootstrap
     bootstrapPath: /opt/ol/wlp/usr/servers/defaultServer/bootstrap.properties
-    truststoreRequired: true
+    truststoreRequired: false
     truststorePath: /config/resources/security
     truststoreSecret: es-truststore-jks
 predictiveModel:
