Update referenced Kafka topic names to lower-case for orderCommands topic
Signed-off-by: Rick Osowski <rosowski@gmail.com>

--- a/scripts/createKafkaTopics.yaml
+++ b/scripts/createKafkaTopics.yaml
@@ -29,7 +29,7 @@ spec:
                 bluewaterShip
                 containers
                 errors
-                orderCommands
+                order-commands
                 orders
                 reeferTelemetries
                 rejected-orders
