Update referenced Kafka topic names to lower-case for reeferTelemetry topic
Signed-off-by: Rick Osowski <rosowski@gmail.com>

--- a/scoring-mp/src/main/resources/META-INF/microprofile-config.properties
+++ b/scoring-mp/src/main/resources/META-INF/microprofile-config.properties
@@ -5,12 +5,12 @@ cp4d_base_url=
 cp4d_prediction_url=
 
 
-# Config specific to reeferTelemetry kafka topic
-mp.messaging.incoming.reeferTelemetry.connector=liberty-kafka
-mp.messaging.incoming.reeferTelemetry.group.id=reeferTelemetry-reactive
-mp.messaging.incoming.reeferTelemetry.topic=reeferTelemetry
-mp.messaging.incoming.reeferTelemetry.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-mp.messaging.incoming.reeferTelemetry.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+# Config specific to reefer-telemetry kafka topic
+mp.messaging.incoming.reefer-telemetry.connector=liberty-kafka
+mp.messaging.incoming.reefer-telemetry.group.id=reefer-telemetry-reactive
+mp.messaging.incoming.reefer-telemetry.topic=reefer-telemetry
+mp.messaging.incoming.reefer-telemetry.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.reefer-telemetry.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 # Config specific to containers kafka topic
 mp.messaging.outgoing.containers.connector=liberty-kafka
