--- a/scripts/createKafkaTopics.yaml
+++ b/scripts/createKafkaTopics.yaml
@@ -31,7 +31,7 @@ spec:
                 errors
                 order-commands
                 orders
-                reeferTelemetries
+                reefer-telemetry
                 rejected-orders
               )
 
