Updated create topics job for hyphenated topic names
Signed-off-by: Rick Osowski <rosowski@gmail.com>

--- a/scripts/createKafkaTopics.yaml
+++ b/scripts/createKafkaTopics.yaml
@@ -24,9 +24,9 @@ spec:
               # To add additional topics, add a newline and the desired name of the topic (keeping in mind the prefix to be applied)
               TOPICS=(
                 allocated-orders
-                bluewaterContainer
-                bluewaterProblem
-                bluewaterShip
+                bluewater-container
+                bluewater-problem
+                bluewater-ship
                 containers
                 errors
                 order-commands
