--- a/scoring-mp/chart/scoringmp/templates/hpa.yaml
+++ b/scoring-mp/chart/scoringmp/templates/hpa.yaml
@@ -10,7 +10,7 @@ metadata:
   namespace: 
 spec:
   scaleTargetRef:
-    apiVersion: apps/v1beta1
+    apiVersion: apps/v1
     kind: Deployment
     name: "{{ .Chart.Name }}-deployment"
   minReplicas: {{ .Values.hpa.minReplicas }}
