scoring prediction bypass

--- a/scoring-mp/chart/scoringmp/templates/deployment.yaml
+++ b/scoring-mp/chart/scoringmp/templates/deployment.yaml
@@ -45,8 +45,8 @@ spec:
           ##################################
           ### Predictive model configuration
           ##################################
-          - name: MOCKUP
-            value: "{{ .Values.predictiveModel.mockup }}"
+          - name: PREDICTIONS_ENABLED
+            value: "{{ .Values.predictiveModel.predictionsEnabled }}"
           - name: CP4D_BASE_URL
             valueFrom:
               configMapKeyRef:
