--- a/simulator/app-deploy.yaml
+++ b/simulator/app-deploy.yaml
@@ -2,13 +2,16 @@ apiVersion: appsody.dev/v1beta1
 kind: AppsodyApplication
 metadata:
   annotations:
-    commit.image.appsody.dev/author: Jerome Boyer <jerome.boyer@gmail.com>
-    commit.image.appsody.dev/committer: GitHub <noreply@github.com>
+    commit.image.appsody.dev/author: Jerome Boyer <boyerje@us.ibm.com>
+    commit.image.appsody.dev/committer: Jerome Boyer <boyerje@us.ibm.com>
     commit.image.appsody.dev/contextDir: /simulator
-    commit.image.appsody.dev/date: Thu Jan 9 17:38:19 2020 -0800
-    commit.image.appsody.dev/message: 'Merge pull request #19 from jbcodeforce/master'
-    image.opencontainers.org/created: "2020-01-10T14:00:37-06:00"
-    image.opencontainers.org/revision: bad18355674e29a1b423c06815ae9a503b61ffb7-modified
+    commit.image.appsody.dev/date: Tue May 12 09:41:39 2020 -0700
+    commit.image.appsody.dev/message: typo in main index
+    image.opencontainers.org/created: "2020-05-29T13:14:42+02:00"
+    image.opencontainers.org/documentation: https://github.com/jesusmah/refarch-reefer-ml
+    image.opencontainers.org/revision: eec58f83ff69dd749b84c7ed04403bb19bbf1c25-modified
+    image.opencontainers.org/source: https://github.com/jesusmah/refarch-reefer-ml/tree/master
+    image.opencontainers.org/url: https://github.com/jesusmah/refarch-reefer-ml
     stack.appsody.dev/configured: docker.io/appsody/python-flask:0.1
     stack.appsody.dev/created: 2019-11-14T10:29:19+0000
     stack.appsody.dev/revision: b3e8a19b0a4b66a69daa8d1106f37bbe4167693a
@@ -19,7 +22,7 @@ metadata:
     stack.appsody.dev/version: 0.1.6
   name: reefer-simulator
 spec:
-  applicationImage: ibmcase/kcontainer-reefer-simulator-appsody:0.1.21
+  applicationImage: ibmcase/kcontainer-reefer-ml-flask-simulator:test
   createKnativeService: false
   env:
   - name: KAFKA_BROKERS
@@ -30,13 +33,13 @@ spec:
   - name: TELEMETRY_TOPIC
     valueFrom:
       configMapKeyRef:
-        name: kafka-topics
         key: reeferTelemetryTopic
+        name: kafka-topics
   - name: CONTAINER_TOPIC
     valueFrom:
       configMapKeyRef:
-        name: kafka-topics
         key: containersTopic
+        name: kafka-topics
   - name: KAFKA_APIKEY
     valueFrom:
       secretKeyRef:
