Update Helm chart with Appsody naming and part-of labels

--- a/scoring-mp/chart/scoringmp/templates/service.yaml
+++ b/scoring-mp/chart/scoringmp/templates/service.yaml
@@ -1,9 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: "{{  .Chart.Name }}-service"
+  name: "scoring-mp"
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
+    app.kubernetes.io/part-of: refarch-kc
 spec:
   type: {{ .Values.service.type }}
   ports:
