--- a/simulator/chart/kcontainer-reefer-simulator/templates/ingress.yaml
+++ b/simulator/chart/kcontainer-reefer-simulator/templates/ingress.yaml
@@ -29,7 +29,7 @@ spec:
         {{- range .paths }}
           - path: {{ . }}
             backend:
-              serviceName: {{ $fullName }}
+              serviceName: "reefer-simulator"
               servicePort: http
         {{- end }}
   {{- end }}
