--- a/simulator/chart/kcontainer-reefer-simulator/templates/service.yaml
+++ b/simulator/chart/kcontainer-reefer-simulator/templates/service.yaml
@@ -1,8 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "kcontainer-reefer-simulator.fullname" . }}
+  name: "reefer-simulator"
   labels:
+    app.kubernetes.io/part-of: refarch-kc
 {{ include "kcontainer-reefer-simulator.labels" . | indent 4 }}
 spec:
   type: {{ .Values.service.type }}
