docker compose local dev refactor

--- a/scoring-mp/src/main/liberty/config/bootstrap.properties
+++ b/scoring-mp/src/main/liberty/config/bootstrap.properties
@@ -1,2 +1,2 @@
 # Configuration for local plain kafka
-mp.messaging.connector.liberty-kafka.bootstrap.servers=kafka1:9092
+mp.messaging.connector.liberty-kafka.bootstrap.servers=kafka:9092
