--- a/scoring-mp/src/main/resources/META-INF/microprofile-config.properties
+++ b/scoring-mp/src/main/resources/META-INF/microprofile-config.properties
@@ -26,14 +26,20 @@ mp.messaging.outgoing.containers.value.serializer=org.apache.kafka.common.serial
 # bootstrap server is the only config needed for plain insercure local kafka instance
 #mp.messaging.connector.liberty-kafka.bootstrap.servers=
 
-# If connecting to Event Streams on IBM Cloud or to any Kafka deployment with SSL security
+# If connecting to Event Streams on IBM Cloud
 # mp.messaging.connector.liberty-kafka.security.protocol=SASL_SSL
 # mp.messaging.connector.liberty-kafka.ssl.protocol=TLSv1.2
 # mp.messaging.connector.liberty-kafka.sasl.mechanism=PLAIN
-# Make sure you set the username and API key at the end
-# mp.messaging.connector.liberty-kafka.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="<USERNAME>" password="<API_KEY>";
+# Make sure you set the Kafka user and password at the end
+# mp.messaging.connector.liberty-kafka.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="<KAFKA_USER>" password="<KAFKA_PASSWORD>";
 
-# If connecting to Event Streams in OpenShift that requires certificates
+# If connecting to Event Streams on OpenShift
+# mp.messaging.connector.liberty-kafka.security.protocol=SASL_SSL
+# mp.messaging.connector.liberty-kafka.ssl.protocol=TLSv1.2
+# mp.messaging.connector.liberty-kafka.sasl.mechanism=SCRAM-SHA-512
+# mp.messaging.connector.liberty-kafka.ssl.truststore.type=PKCS12
+# Make sure you set the Kafka User and password at the end
+# mp.messaging.connector.liberty-kafka.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="<KAFKA_USER>" password="<KAFKA_PASSWORD>";
 # Location for the truststore within the container
 # mp.messaging.connector.liberty-kafka.ssl.truststore.location=
 # Password for the truststore
