Initial scoring-mp to appsody
Signed-off-by: Rick Osowski <rosowski@gmail.com>

--- a/.github/workflows/dockerbuild.yaml
+++ b/.github/workflows/dockerbuild.yaml
@@ -64,14 +64,10 @@ jobs:
       env:
         DEFAULT_BUMP: patch
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - name: Build the simulator docker image
-      id: build-simulator-image
+    - name: Install latest Appsody CLI
+      id: install-appsody-cli
       run: |
-        echo "Build and push the docker image"
-        IMAGE_NAME="${DOCKER_R}/${DOCKER_I}"
-        docker login -u ${DOCKER_U} -p ${DOCKER_P}
         echo "Installing Appsody..."
-        #wget https://github.com/appsody/appsody/releases/download/0.5.4/appsody_0.5.4_amd64.deb
         APPSODY_RELEASE=$(curl -s https://api.github.com/repos/appsody/appsody/releases/latest \
         | grep "browser_download_url.*deb" \
         | cut -d : -f 2,3 \
@@ -79,9 +75,14 @@ jobs:
         echo "Latest Appsody Release found: ${APPSODY_RELEASE}"
         wget ${APPSODY_RELEASE}
         sudo apt install -f ./appsody_*_amd64.deb
+    - name: Build the simulator docker image
+      id: build-simulator-image
+      run: |
+        echo "Build and push the docker image"
+        IMAGE_NAME="${DOCKER_R}/${DOCKER_I}"
+        docker login -u ${DOCKER_U} -p ${DOCKER_P}
         cd ${WORKDIR}
         appsody build --tag ${IMAGE_NAME}:${IMAGE_TAG} --push
-        #docker build . --file ${DOCKERFILE} --tag ${IMAGE_NAME}:${IMAGE_TAG}
         docker tag ${IMAGE_NAME}:${IMAGE_TAG} ${IMAGE_NAME}:latest
         docker push ${IMAGE_NAME}
       env:
@@ -98,7 +99,7 @@ jobs:
         IMAGE_NAME="${DOCKER_R}/${DOCKER_I}"
         docker login -u ${DOCKER_U} -p ${DOCKER_P}
         cd ${WORKDIR}
-        docker build . --file ${DOCKERFILE} --tag ${IMAGE_NAME}:${IMAGE_TAG}
+        appsody build --tag ${IMAGE_NAME}:${IMAGE_TAG} --push
         docker tag ${IMAGE_NAME}:${IMAGE_TAG} ${IMAGE_NAME}:latest
         docker push ${IMAGE_NAME}
       env:
@@ -107,7 +108,6 @@ jobs:
         DOCKER_R: ${{ secrets.DOCKER_REPOSITORY }}
         DOCKER_I: ${{ secrets.DOCKER_IMAGE_SCORING }}
         WORKDIR: scoring-mp
-        DOCKERFILE: Dockerfile.multistage
         IMAGE_TAG: ${{ steps.bump-version-action.outputs.new_tag }}
     - name: Webhook to GitOps repo
       id: gitops-repo-webhook
