--- a/scoring-mp/src/main/resources/META-INF/microprofile-config.properties
+++ b/scoring-mp/src/main/resources/META-INF/microprofile-config.properties
@@ -4,7 +4,6 @@ cp4d_pwd=
 cp4d_base_url=
 cp4d_prediction_url=
 
-
 # Config specific to reefer-telemetry kafka topic
 mp.messaging.incoming.reefer-telemetry.connector=liberty-kafka
 mp.messaging.incoming.reefer-telemetry.group.id=reefer-telemetry-reactive
@@ -20,27 +19,18 @@ mp.messaging.outgoing.containers.key.serializer=org.apache.kafka.common.serializ
 mp.messaging.outgoing.containers.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 
 #### Config shared between all kafka connections
+
 #
-# This is currently added in bootstrap.properties due to https://github.com/OpenLiberty/open-liberty/issues/10575
-#
+# This was previously added in bootstrap.properties due to https://github.com/OpenLiberty/open-liberty/issues/10575
+# 
+
 # bootstrap server is the only config needed for plain insercure local kafka instance
-#mp.messaging.connector.liberty-kafka.bootstrap.servers=
+mp.messaging.connector.liberty-kafka.bootstrap.servers=kafka:9092
 
-# If connecting to Event Streams on IBM Cloud
-# mp.messaging.connector.liberty-kafka.security.protocol=SASL_SSL
-# mp.messaging.connector.liberty-kafka.ssl.protocol=TLSv1.2
-# mp.messaging.connector.liberty-kafka.sasl.mechanism=PLAIN
-# Make sure you set the Kafka user and password at the end
-# mp.messaging.connector.liberty-kafka.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="<KAFKA_USER>" password="<KAFKA_PASSWORD>";
+mp.messaging.connector.liberty-kafka.security.protocol=PLAINTEXT
+mp.messaging.connector.liberty-kafka.ssl.protocol=TLSv1.2
+mp.messaging.connector.liberty-kafka.sasl.mechanism=
+mp.messaging.connector.liberty-kafka.sasl.jaas.config=
 
-# If connecting to Event Streams on OpenShift
-# mp.messaging.connector.liberty-kafka.security.protocol=SASL_SSL
-# mp.messaging.connector.liberty-kafka.ssl.protocol=TLSv1.2
-# mp.messaging.connector.liberty-kafka.sasl.mechanism=SCRAM-SHA-512
-# mp.messaging.connector.liberty-kafka.ssl.truststore.type=PKCS12
-# Make sure you set the Kafka User and password at the end
-# mp.messaging.connector.liberty-kafka.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="<KAFKA_USER>" password="<KAFKA_PASSWORD>";
-# Location for the truststore within the container
-# mp.messaging.connector.liberty-kafka.ssl.truststore.location=
-# Password for the truststore
-# mp.messaging.connector.liberty-kafka.ssl.truststore.password=
+mp.messaging.connector.liberty-kafka.ssl.truststore.location=
+mp.messaging.connector.liberty-kafka.ssl.truststore.password=
