revert changes for bootstrap vs mp-config properties
Signed-off-by: Rick Osowski <rosowski@gmail.com>

--- a/scoring-mp/src/main/resources/META-INF/microprofile-config.properties
+++ b/scoring-mp/src/main/resources/META-INF/microprofile-config.properties
@@ -20,17 +20,17 @@ mp.messaging.outgoing.containers.value.serializer=org.apache.kafka.common.serial
 
 #### Config shared between all kafka connections
 
-#
-# This was previously added in bootstrap.properties due to https://github.com/OpenLiberty/open-liberty/issues/10575
-# 
 
-# bootstrap server is the only config needed for plain insercure local kafka instance
 mp.messaging.connector.liberty-kafka.bootstrap.servers=kafka:9092
 
 mp.messaging.connector.liberty-kafka.security.protocol=PLAINTEXT
 mp.messaging.connector.liberty-kafka.ssl.protocol=TLSv1.2
-mp.messaging.connector.liberty-kafka.sasl.mechanism=
-mp.messaging.connector.liberty-kafka.sasl.jaas.config=
+mp.messaging.connector.liberty-kafka.sasl.mechanism=GSSAPI
 
-mp.messaging.connector.liberty-kafka.ssl.truststore.location=
-mp.messaging.connector.liberty-kafka.ssl.truststore.password=
+#
+# This is added in bootstrap.properties due to https://github.com/OpenLiberty/open-liberty/issues/10575
+# and due to the fact that the Reactive MP framework does not process null properties as desired
+# mp.messaging.connector.liberty-kafka.sasl.jaas.config=null
+# mp.messaging.connector.liberty-kafka.ssl.truststore.location=null
+# mp.messaging.connector.liberty-kafka.ssl.truststore.password=null
+#
