revert changes for bootstrap vs mp-config properties
Signed-off-by: Rick Osowski <rosowski@gmail.com>

--- a/scoring-mp/src/main/resources/META-INF/microprofile-config.properties
+++ b/scoring-mp/src/main/resources/META-INF/microprofile-config.properties
@@ -20,16 +20,23 @@ mp.messaging.outgoing.containers.value.serializer=org.apache.kafka.common.serial
 
 #### Config shared between all kafka connections
 
-
+# Can be overriden with env var MP_MESSAGING_CONNECTOR_LIBERTY_KAFKA_BOOTSTRAP_SERVERS
 mp.messaging.connector.liberty-kafka.bootstrap.servers=kafka:9092
 
+# Can be overriden with env var MP_MESSAGING_CONNECTOR_LIBERTY_KAFKA_SECURITY_PROTOCOL
 mp.messaging.connector.liberty-kafka.security.protocol=PLAINTEXT
+
+# Can be overriden with env var MP_MESSAGING_CONNECTOR_LIBERTY_KAFKA_SSL_PROTOCOL
 mp.messaging.connector.liberty-kafka.ssl.protocol=TLSv1.2
+
+# Can be overriden with env var MP_MESSAGING_CONNECTOR_LIBERTY_KAFKA_SASL_MECHANISM
 mp.messaging.connector.liberty-kafka.sasl.mechanism=GSSAPI
 
 #
-# This is added in bootstrap.properties due to https://github.com/OpenLiberty/open-liberty/issues/10575
+# These are added in bootstrap.properties due to https://github.com/OpenLiberty/open-liberty/issues/10575
 # and due to the fact that the Reactive MP framework does not process null properties as desired
+# and they cannot be overriden by an env var if not defined here.
+#
 # mp.messaging.connector.liberty-kafka.sasl.jaas.config=null
 # mp.messaging.connector.liberty-kafka.ssl.truststore.location=null
 # mp.messaging.connector.liberty-kafka.ssl.truststore.password=null
