Updated scoring-mp bootstrap vs mp-config properties (#73)
* Moved security properties from boostrap to mp-config properties

Signed-off-by: Rick Osowski <rosowski@gmail.com>

* revert changes for bootstrap vs mp-config properties

Signed-off-by: Rick Osowski <rosowski@gmail.com>

* revert changes for bootstrap vs mp-config properties

Signed-off-by: Rick Osowski <rosowski@gmail.com>

--- a/scoring-mp/src/main/liberty/config/bootstrap.properties
+++ b/scoring-mp/src/main/liberty/config/bootstrap.properties
@@ -1,2 +1,7 @@
-# Configuration for local plain kafka
-mp.messaging.connector.liberty-kafka.bootstrap.servers=kafka:9092
+#
+# These are added in bootstrap.properties due to https://github.com/OpenLiberty/open-liberty/issues/10575
+# and due to the fact that the Reactive MP framework does not process null properties as desired
+# mp.messaging.connector.liberty-kafka.sasl.jaas.config=null
+# mp.messaging.connector.liberty-kafka.ssl.truststore.location=null
+# mp.messaging.connector.liberty-kafka.ssl.truststore.password=null
+#
