--- a/scoring-mp/src/main/resources/META-INF/microprofile-config.properties
+++ b/scoring-mp/src/main/resources/META-INF/microprofile-config.properties
@@ -4,7 +4,6 @@ cp4d_pwd=
 cp4d_base_url=
 cp4d_prediction_url=
 
-
 # Config specific to reefer-telemetry kafka topic
 mp.messaging.incoming.reefer-telemetry.connector=liberty-kafka
 mp.messaging.incoming.reefer-telemetry.group.id=reefer-telemetry-reactive
@@ -20,27 +19,25 @@ mp.messaging.outgoing.containers.key.serializer=org.apache.kafka.common.serializ
 mp.messaging.outgoing.containers.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 
 #### Config shared between all kafka connections
-#
-# This is currently added in bootstrap.properties due to https://github.com/OpenLiberty/open-liberty/issues/10575
-#
-# bootstrap server is the only config needed for plain insercure local kafka instance
-#mp.messaging.connector.liberty-kafka.bootstrap.servers=
 
-# If connecting to Event Streams on IBM Cloud
-# mp.messaging.connector.liberty-kafka.security.protocol=SASL_SSL
-# mp.messaging.connector.liberty-kafka.ssl.protocol=TLSv1.2
-# mp.messaging.connector.liberty-kafka.sasl.mechanism=PLAIN
-# Make sure you set the Kafka user and password at the end
-# mp.messaging.connector.liberty-kafka.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="<KAFKA_USER>" password="<KAFKA_PASSWORD>";
+# Can be overriden with env var MP_MESSAGING_CONNECTOR_LIBERTY_KAFKA_BOOTSTRAP_SERVERS
+mp.messaging.connector.liberty-kafka.bootstrap.servers=kafka:9092
 
-# If connecting to Event Streams on OpenShift
-# mp.messaging.connector.liberty-kafka.security.protocol=SASL_SSL
-# mp.messaging.connector.liberty-kafka.ssl.protocol=TLSv1.2
-# mp.messaging.connector.liberty-kafka.sasl.mechanism=SCRAM-SHA-512
-# mp.messaging.connector.liberty-kafka.ssl.truststore.type=PKCS12
-# Make sure you set the Kafka User and password at the end
-# mp.messaging.connector.liberty-kafka.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="<KAFKA_USER>" password="<KAFKA_PASSWORD>";
-# Location for the truststore within the container
-# mp.messaging.connector.liberty-kafka.ssl.truststore.location=
-# Password for the truststore
-# mp.messaging.connector.liberty-kafka.ssl.truststore.password=
+# Can be overriden with env var MP_MESSAGING_CONNECTOR_LIBERTY_KAFKA_SECURITY_PROTOCOL
+mp.messaging.connector.liberty-kafka.security.protocol=PLAINTEXT
+
+# Can be overriden with env var MP_MESSAGING_CONNECTOR_LIBERTY_KAFKA_SSL_PROTOCOL
+mp.messaging.connector.liberty-kafka.ssl.protocol=TLSv1.2
+
+# Can be overriden with env var MP_MESSAGING_CONNECTOR_LIBERTY_KAFKA_SASL_MECHANISM
+mp.messaging.connector.liberty-kafka.sasl.mechanism=GSSAPI
+
+#
+# These are added in bootstrap.properties due to https://github.com/OpenLiberty/open-liberty/issues/10575
+# and due to the fact that the Reactive MP framework does not process null properties as desired
+# and they cannot be overriden by an env var if not defined here.
+#
+# mp.messaging.connector.liberty-kafka.sasl.jaas.config=null
+# mp.messaging.connector.liberty-kafka.ssl.truststore.location=null
+# mp.messaging.connector.liberty-kafka.ssl.truststore.password=null
+#
