--- a/simulator/app-deploy.yaml
+++ b/simulator/app-deploy.yaml
@@ -26,7 +26,7 @@ metadata:
     stack.appsody.dev/version: 0.1.6
   name: reefer-simulator
 spec:
-  applicationImage: ibmcase/kcontainer-reefer-ml-flask-simulator:test
+  applicationImage: quay.io/ibmcase/kcontainer-reefer-simulator-appsody:latest
   createKnativeService: false
   env:
   - name: KAFKA_BROKERS
